<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".UI.Login">

    <ImageView
        android:layout_width="146dp"
        android:layout_height="76.89dp"
        android:id="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginUi"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="498dp"
        android:id="@+id/loginUi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="400dp"
        android:background="@drawable/background_login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="165dp"
            android:layout_height="68dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/login_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/email"
            android:textColor="@color/black"
            android:layout_marginTop="90dp"
            android:layout_marginStart="25dp"/>
        <EditText
            android:layout_width="385dp"
            android:layout_height="54dp"
            android:id="@+id/ed_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_email"
            android:layout_marginTop="5dp"
            android:hint="@string/write_your_email"
            android:textColorHint="@color/hint"
            android:paddingStart="12dp"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_background"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_email"
            android:text="@string/password"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginStart="25dp"/>
        <EditText
            android:layout_width="385dp"
            android:layout_height="54dp"
            android:id="@+id/ed_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:layout_marginTop="5dp"
            android:hint="@string/write_8_character_at_least"
            android:paddingStart="12dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:background="@drawable/edit_text_background"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Forget_Password_Text"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/ed_password"
            android:text="@string/forget_the_password"
            android:textColor="#9C9C9C"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="305dp"
            android:layout_height="52dp"
            android:id="@+id/bt_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Forget_Password_Text"
            android:layout_marginTop="40dp"
            android:text="@string/log_in_bt"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@color/Cadmium_Green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_DHA"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintStart_toStartOf="@id/bt_login"
            app:layout_constraintEnd_toEndOf="@id/bt_login"
            app:layout_constraintTop_toBottomOf="@id/bt_login"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/black"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_sign_up"
            android:text="@string/sign_up"
            android:textColor="@color/Cadmium_Green"
            app:layout_constraintStart_toEndOf="@id/text_DHA"
            app:layout_constraintTop_toBottomOf="@id/bt_login"
            android:layout_marginTop="30dp"
            android:textSize="12sp"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry"
            android:onClick="Sign_In"/>

    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>