<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/linear_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginStart="130dp"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/c"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/menu"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_of_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_home"
        android:text="@string/hello"
        android:textSize="32sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        app:layout_constraintStart_toStartOf="@id/name_of_user"
        app:layout_constraintTop_toBottomOf="@id/name_of_user"
        android:layout_marginStart="10dp"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        />
    <ImageView
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:id="@+id/go"
        android:src="@drawable/go"
        app:layout_constraintStart_toEndOf="@id/location"
        app:layout_constraintTop_toTopOf="@id/location"
        app:layout_constraintBottom_toBottomOf="@id/location"
        android:layout_marginStart="15dp"
        />
    <EditText
        android:layout_width="303dp"
        android:layout_height="44dp"
        android:id="@+id/ed_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/sfff"
        android:paddingStart="12dp"
        android:textColorHint="@color/hint"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_background"
        tools:ignore="RtlSymmetry,TextFields" />
    
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/search_logo"
        android:src="@drawable/search"
        app:layout_constraintStart_toEndOf="@id/ed_search"
        app:layout_constraintTop_toTopOf="@id/ed_search"
        app:layout_constraintBottom_toBottomOf="@id/ed_search"
        android:layout_marginStart="5dp"/>
    
    <ImageView
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:id="@+id/filter"
        android:src="@drawable/f"
        app:layout_constraintStart_toEndOf="@id/search_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_logo"
        app:layout_constraintBottom_toBottomOf="@id/search_logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_Cat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_search"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/categories"
        android:textSize="14sp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_all"
        android:text="@string/view_all"
        android:textSize="10sp"
        android:textColor="@color/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_Cat"
        app:layout_constraintBottom_toBottomOf="@id/text_Cat"
        android:layout_marginEnd="5dp"
        tools:ignore="SmallSp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycle_c"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Cat"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycle_c"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/popular_now"
        android:textSize="14sp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_all_popular"
        android:text="@string/view_all"
        android:textSize="10sp"
        android:textColor="@color/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/popular"
        app:layout_constraintBottom_toBottomOf="@id/popular"
        android:layout_marginEnd="5dp"
        tools:ignore="SmallSp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycle_popular"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popular"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycle_popular"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/trending_now"
        android:textSize="14sp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_all_trending"
        android:text="@string/view_all"
        android:textSize="10sp"
        android:textColor="@color/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/trending"
        app:layout_constraintBottom_toBottomOf="@id/trending"
        android:layout_marginEnd="5dp"
        tools:ignore="SmallSp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycle_trending"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trending"/>



</androidx.constraintlayout.widget.ConstraintLayout>